# src/libs/republica-cafe-management/model/models.ts
@@ -1,6 +1,8 @@
 export * from './authTokenResponse';
 export * from './hTTPValidationError';
+export * from './loginRequest';
 export * from './reportRequest';
 export * from './reportResponse';
+export * from './user';
 export * from './validationError';
 export * from './validationErrorLocInner';
